--- a/_data/share.yml
+++ b/_data/share.yml
@@ -14,6 +14,10 @@ platforms:
     icon: "fab fa-telegram"
     link: "https://t.me/share/url?url=URL&text=TITLE"
 
+  - type: HackerNews
+    icon: "fab fa-hacker-news"
+    link: "https://news.ycombinator.com/submitlink?u=URL&t=TITLE"
+
  
   # Uncomment below if you need to.
   #
